--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 #spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
